--- a/.github/workflows/update-list.yml
+++ b/.github/workflows/update-list.yml
@@ -25,11 +25,9 @@ jobs:
         python3 update.py
 
     - name: Commit and push changes
-      uses: actions/github-script@0.10.0
-      with:
-        script: |
-          git config --global user.email '41898282+github-actions[bot]@users.noreply.github.com'
-          git config --global user.name 'github-actions[bot]'
-          git add README.md
-          git commit -m 'Update repository list'
-          git push origin HEAD
+      run: |
+        git config --global user.email '41898282+github-actions[bot]@users.noreply.github.com'
+        git config --global user.name 'github-actions[bot]'
+        git add README.md
+        git commit -m 'Update repository list'
+        git push origin HEAD
