--- a/.github/workflows/update-list.yml
+++ b/.github/workflows/update-list.yml
@@ -4,9 +4,6 @@ on:
   workflow_dispatch:
   schedule:
     - cron: '30 5 * * 3'
-  push:
-    branches:
-      - main
 
 jobs:
   build:
@@ -28,6 +25,8 @@ jobs:
       run: |
         git config --global user.email '41898282+github-actions[bot]@users.noreply.github.com'
         git config --global user.name 'github-actions[bot]'
-        git add README.md
-        git commit -m 'Update repository list'
-        git push origin HEAD
+        git add .
+        if [ -n "$(git status --porcelain)" ]; then
+          git commit -m 'Update repository list'
+          git push origin HEAD
+        fi
